--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -20,6 +20,7 @@ jobs:
             https://www.junian.net/dev/index.xml
             https://www.junian.net/tech/index.xml
           file: 'README.md'
+          format: '- [${title}](${url}) <sub>${monthshort} ${02day}</sub>'
           timezone: 'Asia/Jakarta'
           ensure_all: true
       - name: push to master
