--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: sarisia/actions-readme-feed@v1
-        id: feed
+        id: blog-feed
         with:
           url: |
             https://www.junian.net/dev/index.xml
@@ -23,6 +23,20 @@ jobs:
           format: '- [${title}](${url}) <sub>${monthlong} ${02day}, ${year}</sub>'
           timezone: 'Asia/Jakarta'
           max_entry: 10
+          start_flag: '<!-- blog feed start -->'
+          end_flag: '<!-- blog feed end -->'
+          ensure_all: true
+      - uses: sarisia/actions-readme-feed@v1
+        id: youtube-feed
+        with:
+          url: |
+            https://www.youtube.com/feeds/videos.xml?channel_id=UCepvZYlW1tWJ8bu3dWLQh2w
+          file: 'README.md'
+          format: '- [${title}](${url}) <sub>${monthlong} ${02day}, ${year}</sub>'
+          timezone: 'Asia/Jakarta'
+          max_entry: 10
+          start_flag: '<!-- youtube feed start -->'
+          end_flag: '<!-- youtube feed end -->'
           ensure_all: true
       - name: push to master
         if: steps.feed.outputs.changed == true
