--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -38,7 +38,7 @@ jobs:
           end_flag: '<!-- youtube feed end -->'
           ensure_all: true
       - name: push to master
-        if: steps.feed.outputs.changed == true
+        if: steps.blog-feed.outputs.changed == true || steps.youtube-feed.outputs.changed == true
         id: commit
         uses: sarisia/actions-commit@master
         with:
