--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -12,7 +12,7 @@ jobs:
       changed: ${{ steps.feed.outputs.changed }}
       items: ${{ steps.feed.outputs.items }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: sarisia/actions-readme-feed@v1
         id: blog-feed
         with:
@@ -37,9 +37,16 @@ jobs:
           start_flag: '<!-- youtube feed start -->'
           end_flag: '<!-- youtube feed end -->'
           ensure_all: true
-      - name: push to master
+      - name: Commit changes if any
         if: steps.blog-feed.outputs.changed == true || steps.youtube-feed.outputs.changed == true
         id: commit
-        uses: sarisia/actions-commit@master
-        with:
-          message: "docs: update feed"
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git add -A
+            git commit -m "docs: update feed"
+            git push
+          else
+            echo "No changes to commit."
+          fi
