--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -27,6 +27,19 @@ jobs:
           end_flag: '<!-- blog feed end -->'
           ensure_all: true
       - uses: sarisia/actions-readme-feed@v1
+        id: blog-feed-all
+        with:
+          url: |
+            https://www.junian.net/dev/index.xml
+            https://www.junian.net/tech/index.xml
+          file: 'blog/README.md'
+          format: '- [${title}](${url}) <sub>${monthlong} ${02day}, ${year}</sub>'
+          timezone: 'Asia/Jakarta'
+          max_entry: 2147483647
+          start_flag: '<!-- feed start -->'
+          end_flag: '<!-- feed end -->'
+          ensure_all: true
+      - uses: sarisia/actions-readme-feed@v1
         id: youtube-feed
         with:
           url: 'https://www.youtube.com/feeds/videos.xml?channel_id=UCepvZYlW1tWJ8bu3dWLQh2w'
