--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -1,4 +1,5 @@
 name: 'rss-to-readme'
+
 on:
   workflow_dispatch:
   push:
@@ -6,7 +7,7 @@ on:
     - cron: '0 * * * *'
 
 jobs:
-  readme:
+  fetch-rss:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +31,7 @@ jobs:
             https://www.junian.net/dev/index.xml
             https://www.junian.net/tech/index.xml
           file: 'blog/README.md'
-          format: '- [${title}](${url}) <sub>${monthlong} ${02day}, ${year}</sub>'
+          format: '- `${monthshort} ${02day}, ${year}` [${title}](${url})'
           timezone: 'Asia/Jakarta'
           max_entry: 2147483647
           start_flag: '<!-- feed start -->'
