--- a/.github/workflows/rss-to-readme.yaml
+++ b/.github/workflows/rss-to-readme.yaml
@@ -48,6 +48,17 @@ jobs:
           start_flag: '<!-- youtube feed start -->'
           end_flag: '<!-- youtube feed end -->'
           ensure_all: true
+      - uses: sarisia/actions-readme-feed@v1
+        id: youtube-feed-all
+        with:
+          url: 'https://www.youtube.com/feeds/videos.xml?channel_id=UCepvZYlW1tWJ8bu3dWLQh2w'
+          file: 'youtube/README.md'
+          format: '- `${monthshort} ${02day}, ${year}` [${title}](${url})'
+          timezone: 'Asia/Jakarta'
+          max_entry: 2147483647
+          start_flag: '<!-- youtube feed start -->'
+          end_flag: '<!-- youtube feed end -->'
+          ensure_all: true
       - name: Commit changes if any
         id: commit
         run: |
